--- a/src/page.css
+++ b/src/page.css
@@ -202,10 +202,10 @@ input[type='range']::-ms-thumb {
 	right: 0;
 	z-index: 2;
 	margin-right: 72px;
-	display: flex;
+	display: none;
 	align-items: center;
 	opacity: 0;
-	transition: opacity 0.3s;
+	transition: opacity 1s;
 }
 
 .header__volume_control_button {
