Mission 1 group names now make more sense; Game log legibility improved; scene003.js file added

--- a/src/game.css
+++ b/src/game.css
@@ -569,7 +569,7 @@
 }
 
 .game__pause-objective--red {
-	color: #ff6666;
+	color: #ff7676;
 }
 
 .game__pause-objective--green {
@@ -654,7 +654,7 @@
 }
 
 .game__log-proper .red {
-	color: #ff6161;
+	color: #ff7676;
 }
 
 .game__log-proper .yellow {
@@ -666,7 +666,7 @@
 }
 
 .game__log-proper .dark_green {
-	color: #1f851f;
+	color: #29a829;
 }
 
 .game__log-expand {
