"pixi.js-keyboard" package replaced with my own version; The active controlScheme can now be suspended and restored

--- a/src/game.css
+++ b/src/game.css
@@ -444,6 +444,10 @@
 	transition: opacity ease-in-out 1s;
 }
 
+#game__intro-plate-1__big-text {
+	text-transform: none;
+}
+
 .game__intro-plate__small-text {
 	text-transform: uppercase;
 	font-size: 12px;
