--- a/src/hall-of-finishers/hall-of-finishers.css
+++ b/src/hall-of-finishers/hall-of-finishers.css
@@ -140,6 +140,7 @@ h3 {
 	border: 1px solid #766741;
 	border-right-color: #543b00;
 	border-bottom-color: #543b00;
+	box-shadow: 0 0 3px #00000090;
 }
 
 .finishers-entry__proper {
