--- a/src/game.css
+++ b/src/game.css
@@ -644,11 +644,10 @@
 	background-color: #ffffff10;
 	display: none;
 	/* set to display: flex; to show */
-	cursor: pointer;
+	cursor: default;
 	transition: background-color ease 0.25s;
 }
 
-.game__log:hover,
 .game__log--expanded,
 .game__log--hidden.game__log--expanded {
 	background-color: #ffffff15;
@@ -748,21 +747,12 @@
 }
 
 .game__log-expand-chevron-path,
-.game__log:hover .game__log-expand-chevron-path,
 .game__log--hidden.game__log--expanded .game__log-expand-chevron-path {
 	stroke: #ffffffff;
 }
 
 .game__log--hidden .game__log-expand-chevron-path {
 	stroke: #ffffff60;
-}
-
-.game__log:hover .game__log-expand-chevron {
-	transform: scale(0.6) rotate(0deg);
-}
-
-.game__log--expanded:hover .game__log-expand-chevron {
-	transform: scale(0.6) rotate(180deg);
 }
 
 .game__hud {
